Uploaded all available logos for the previews

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <b class="text-uppercase fa-2x">RIM RAM RUM</b>
+				<img class="img-fluid" src="img/portfolio/rimramrum/logo.png" alt="RIM RAM RUM">
+                <!--<b class="text-uppercase fa-2x">RIM RAM RUM</b>-->
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/rimramrum/preview2.gif" alt="">
@@ -107,7 +108,8 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <b class="text-uppercase fa-2x">Hammer Hermit</b>
+				<img class="img-fluid" src="img/portfolio/hammerhermit/logo.png" alt="Hammer Hermit">
+                <!--<b class="text-uppercase fa-2x">Hammer Hermit</b>-->
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/hammerhermit/preview2.gif" alt="">
@@ -119,7 +121,8 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <b class="text-uppercase fa-2x">Transient</b>
+				<img class="img-fluid" src="img/portfolio/transient/logo.png" alt="Transient">
+                <!--<b class="text-uppercase fa-2x">Transient</b>-->
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/transient/preview.gif" alt="">
@@ -131,6 +134,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
+				<!--<img class="img-fluid" src="img/portfolio/junkhilldrifters/logo.png" alt="Ambiverse">-->
                 <b class="text-uppercase fa-2x">Ambiverse</b>
               </div>
             </div>
@@ -143,7 +147,8 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <b class="text-uppercase fa-2x">Agraria</b>
+				<img class="img-fluid" src="img/portfolio/agraria/logo.png" alt="Agraria">
+                <!--<b class="text-uppercase fa-2x">Agraria</b>-->
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/agraria/preview2.gif" alt="">
@@ -155,7 +160,8 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <b class="text-uppercase fa-2x">Junkhill Drifters</b>
+				<img class="img-fluid" src="img/portfolio/junkhilldrifters/logo.png" alt="Junkhill Drifters">
+                <!--<b class="text-uppercase fa-2x">Junkhill Drifters</b>-->
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/junkhilldrifters/preview.gif" alt="">
