optimized picture in rim ram rum modal

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 					It was a breeze. 
 					</p>
 					<!-- Portfolio Modal - Image -->
-					<img class="img-fluid rounded mb-5" src="img/portfolio/rimramrum/charselect.png" alt="">
+					<img class="img-fluid rounded mb-5" src="img/portfolio/rimramrum/charselect.jpg" alt="">
 				</div></div>
 				
 				<!-- Portfolio Modal - Header -->
