Added new skill, video editing

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
 				<li><i class="far fa-lightbulb"></i> Game Design</li>
 				<li><i class="fas fa-music"></i> Sound Design</li>
 				<li><i class="fas fa-drum"></i> Music Composition</li>
+				<li><i class="fas fa-film"></i> Video Editing</li>
 				<li><i class="fas fa-pencil-alt"></i> Writing</li>
 			  </ul>
 		</div>
@@ -607,7 +608,7 @@
                 </div>
 				<div class="text-secondary">
                 <!-- Portfolio Modal - Intro -->
-                <p class="mb-4"><i>Join Elizabeth's adventure through personal nightmares to find her missing doll. Discover the truth of the night before the shadow monster discovers you...</i></p>
+                <p class="mb-4"><i>Join Elizabeth in her adventure through personal nightmares to find her missing doll. Discover the truth of the night before the shadow monster discovers you...</i></p>
 				
 				<!-- Portfolio Modal - Details -->
 				<hr><div class="row text-left">
