Portfolio items expands slightly when hovered over, making the page feel less static

--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
 						</p><p>
 						Player characters that have filled their wait gauge, need to select what type of action to do before being put in the act queue. Actions can be attacking or using an item, though the latter is still not a feature.
 						</p><p>
-						For all characters first in the queue, a coroutine function will fire off another script dedicated to different types of actions - ActionHandler.cs.
+						For characters that are first in the act queue, a coroutine function will fire off from another script dedicated to different types of actions - ActionHandler.cs.
 						</p>
 					</div>
 				</div>
