Aligned project content to left, tweaked text color to something more readable

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <div class="about-intro mb-4">
 		<div class="lead text-justify">
 			<p>
-			I'm an enthusiastic <b>game developer</b> who's been greatly interested in creating video game fun since forever!
+			Oh, <b>me</b>? I'm an enthusiastic <b>game developer</b> who's been greatly interested in creating video game fun since forever!
 			</p><p>
 			That is why I have acquainted myself with multiple fields within game dev to become a <b>capable</b> and <b>savvy developer</b>.<br>
 			With my main and strongest proffession being <b>programming</b>, I quickly get to rapidly prototype game concepts and use my problem solving ability to solve bugs and faulty design alike.<br>
@@ -444,7 +444,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Unconventional input handling</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 					<p>
 					The great concern at that time was how to have the game recognize inputs from multiple mices, since our constructed controls relied on using a mouse for each player to detect which way a wheel was steering towards. A unity plug-in called Multi Input helped resolve that issue since nearly no other tools was possible to use. The library that the asset provided made it possible for the game to distinguish and handle multiple input devices of the same type.<br>
 					However, the implementation of the new input methods meant that each player needed an input device assigned through code. The game should know what input devices to use for each player since each steering wheel was designed to be used by player 1 and 2 respectively. .  
@@ -454,7 +454,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Ship selection screen</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 					<p>
 					It was a breeze. 
 					</p>
@@ -465,7 +465,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Team battle mode</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 					<p>
 					Gang up on people.  
 					</p>
@@ -537,7 +537,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Raytrace collisions</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 					<p>
 					Tight collision checks that haven't once failed me.  
 					</p>
@@ -548,7 +548,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Entity spawner</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 					<p>
 					I don't even know if this is good enough to brag about.  
 					</p>
@@ -559,7 +559,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">2 player mode</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 					<p>
 					Almost canceled feature. Shoehorned in 2 hours before deadline.  
 					</p>
@@ -629,7 +629,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Dynamic music system</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 					<p>
 					Music changes when you're chased, sneaking, doing dishes.  
 					</p>
@@ -638,7 +638,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Detecting interactable objects</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 					<p>
 					Irritating to work with. Real talk. 
 					</p>
@@ -647,7 +647,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Sound effects collisions</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 					<p>
 					Classes that randomly plays sfx from a collection. Easily usable. 
 					</p>
@@ -714,7 +714,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Battle system</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 						<p>
 						A script called BattleDirector.cs, manages a battle once the player initiates it, by touching a mob in the level. Each player character and enemy are positioned on the locations marked on the picture below.
 						</p>
@@ -736,7 +736,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Active attack commands</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 					<p>
 					Wail away with a bunch of coroutines which I'm now surprised still works well.  
 					</p>
@@ -745,7 +745,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Level flip mechanic</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 					<p>
 					I sometimes really ask myself how I was able to pull it off. Don't think the methods works in current versions of Unity.
 					</p>
@@ -754,7 +754,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Co-op implementation</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 					<p>
 					Done with character classes checking for different input axes depending on co-op = true/false.
 					</p>
@@ -825,7 +825,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Level altering vegetation</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 						<p>
 						Main mechanic. Change states and properties of tiles on the level grid.  
 						</p>
@@ -835,7 +835,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Player avoiding AI</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 						<p>
 						Uses a troll algorithm to bamboozle the player.  
 						</p>
@@ -845,7 +845,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Level editor</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 						<p>
 						It was like a complete separate project. Insane. 
 						</p>
@@ -919,7 +919,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Game states</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 						<p>
 						Nothing like skipping lobby and building game, to directly race w friends.
 						</p>
@@ -929,7 +929,7 @@
 				<!-- Portfolio Modal - Header -->
 				<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">Checkpoint system</h3>
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
-					<div class="project-content text-justify">
+					<div class="project-content">
 						<p>
 						Blueprinting magic. It was all a haze.
 						</p>
