--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
       <!-- About Section Content -->
       <div class="about-intro mb-4">
-		<div class="lead text-left">
+		<div class="lead text-justify">
 				<div><img class="img-about-me rounded" src="img/aboutme.png" alt="Me!"></div>
 				
 				<p>Oh, <b>me</b>? I'm <b>Antonio Ackalin!</b></p>
