--- a/index.html
+++ b/index.html
@@ -192,17 +192,17 @@
 
       <!-- About Section Content -->
       <div class="about-intro mb-4">
-		<div class="lead text-justify">
-				<div><img class="img-about-me rounded" src="img/aboutme.png" alt="Me!"></div>
+		<div class="lead text-left">
+				<div><img class="img-about-me rounded" src="img/aboutme.png" alt="Picture of me!"></div>
 				
-				<p>Oh, <b>me</b>? I'm <b>Antonio Ackalin!</b></p>
-				<p>A creative enthusiastic <b>game developer</b> who's been greatly interested in creating video game fun since forever!
+				<p>Oh, <b>me</b>? I'm <b>Antonio Ackalin</b>!</p>
+				<p>A creative and enthusiastic <b>game developer</b> who's been greatly interested in creating video game fun since forever!
 				Ever since creating my first game in 2014, I have acquainted myself with multiple fields within game dev to become a <b>capable</b> and <b>savvy developer</b>.
 				</p><p>
-				With my main and strongest profession being <b>programming</b>, I quickly get to create <b>gameplay mechanics</b> and work towards constructing the <b>player's experience</b>, ensuring it's one that is not soon forgotten. Along the way, I use my <b>problem solving</b> ability to solve bugs and faulty design alike. 
-				My preferences are to work on tight responsive gameplay and wherever the aesthetics of the game can be expressed the most.
+				With my main and strongest profession being <b>programming</b>, I quickly get to create gameplay mechanics and work towards constructing the player's experience, ensuring it's one that is not soon forgotten. Along the way, I use my <b>problem solving</b> ability to solve bugs and faulty design alike. 
+				My <b>preferences</b> are to work on tight responsive gameplay</b> and wherever the aesthetics of the game can be expressed the most.
 				</p><p>
-				I have amassed plenty of experience of working in projects and am dependable in teamwork with people of other disciplines. During projects I support team morale and pull through difficult situations with humor and optimism. Diligence and high spirits have helped me adapt to wherever I've ended up in and I've got no shortage of high spirits particularly. I enjoy creating stuff after all, especially with good company and swedish fika!
+				I have amassed plenty of experience of working in projects and am <b>dependable</b> in teamwork with people of other disciplines. During projects I <b>support</b> team morale and pull through difficult situations with humor and optimism. Diligence and high spirits have helped me <b>adapt</b> to wherever I've ended up in and I've got no shortage of high spirits particularly.<br>I enjoy <b>creating</b> stuff after all, especially with good company and swedish fika!
 				</p><!--<p>	
 				
 				With my main and strongest proffession being <b>programming</b>, I quickly get to rapidly prototype game concepts and use my problem solving ability to solve bugs and faulty design alike. 
