Modal project link scales better on smaller screens

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         <!-- Footer About Text -->
         <div class="col-lg-4">
           <h4 class="text-uppercase mb-4">E-Mail</h4>
-          <p class="lead mb-0">antonio.ackalin@futuregames.nu</p>
+          <p class="lead mb-0">antonio.ackalin @ futuregames.nu</p>
         </div>
 
       </div>
@@ -419,7 +419,7 @@
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
-				  <a href="https://studiohotpot.itch.io/rim-ram-rum" target="_blank" class="btn btn-secondary">Available on itch.io</a>
+				  <a href="https://studiohotpot.itch.io/rim-ram-rum" target="_blank" class="btn btn-secondary btn-project-link">Available on itch.io</i></a>				  
                   <div class="divider-custom-line"></div>
                 </div>
 				<div class="text-secondary">
@@ -542,7 +542,7 @@
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
-				  <a href="https://fireshadows.itch.io/hammer-hermit" target="_blank" class="btn btn-secondary">Available on itch.io</a>
+				  <a href="https://fireshadows.itch.io/hammer-hermit" target="_blank" class="btn btn-secondary btn-project-link">Available on itch.io</a>
                   <div class="divider-custom-line"></div>
                 </div>
 				<div class="text-secondary">
@@ -727,7 +727,7 @@
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
-				  <a href="https://studiohotpot.itch.io/ambiverse" target="_blank" class="btn btn-secondary">Available on itch.io</a>
+				  <a href="https://studiohotpot.itch.io/ambiverse" target="_blank" class="btn btn-secondary btn-project-link">Available on itch.io</a>
                   <div class="divider-custom-line"></div>
                 </div>
                 <div class="text-secondary">
@@ -928,7 +928,7 @@
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
-				  <a href="https://barthuc.itch.io/junkhill-drifters" target="_blank" class="btn btn-secondary">Available on itch.io</a>
+				  <a href="https://barthuc.itch.io/junkhill-drifters" target="_blank" class="btn btn-secondary btn-project-link">Available on itch.io</a>
                   <div class="divider-custom-line"></div>
                 </div>
                 <div class="text-secondary">
