--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Status</h4>
-          <p class="lead mb-0">Building portfolio site</p>
+          <p class="lead mb-0">Studying in Futuregames</p>
         </div>
 
         <!-- Footer Social Icons -->
