Word wrapping text at footer

--- a/index.html
+++ b/index.html
@@ -371,10 +371,10 @@
           </a>
         </div>
 
-        <!-- Footer About Text -->
+        <!-- Footer About E-Mail -->
         <div class="col-lg-4">
           <h4 class="text-uppercase mb-4">E-Mail</h4>
-          <p class="lead mb-0">antonio.ackalin @ futuregames.nu</p>
+          <p class="lead mb-0">antonio.ackalin@futuregames.nu</p>
         </div>
 
       </div>
