Code snippets upload

--- a/index.html
+++ b/index.html
@@ -202,20 +202,7 @@
 		My <b>preferences</b> are to work on tight responsive gameplay</b> and wherever the aesthetics of the game can be expressed the most.
 		</p><p>
 		I have amassed plenty of experience of working in projects and am <b>dependable</b> in teamwork with people of other disciplines. During projects I <b>support</b> team morale and pull through difficult situations with humor and optimism. Diligence and high spirits have helped me <b>adapt</b> to wherever I've ended up in and I've got no shortage of high spirits particularly.<br>I enjoy <b>creating</b> stuff after all, especially with good company and swedish fika!
-		</p><!--<p>	
-		
-		With my main and strongest proffession being <b>programming</b>, I quickly get to rapidly prototype game concepts and use my problem solving ability to solve bugs and faulty design alike. 
-		My <b>main interests</b> involve creating <b>gameplay mechanics</b> and constructing the <b>player's experience</b>, ensuring it's one that is not soon forgotten. I prefer to work wherever the aesthetics of the game can be expressed the most.
-		
-		On my free time, I practice game dev with side projects while learning to use Unity, Unreal Engine and C++ libraries.<br>
-		I also study the genre of games I enjoy the most to explore and distinguish the strengths and weaknesses of their game design. <br>
-		And occasionally, I read or watch other media to absorb influences to my preferred aesthetics which I then like to channel into my work.
-		
-		</p><p>
-		As a game dev, I face the industry equipped with my wireless keyboard and shiny headset.<br>
-		I enjoy doing all this especially with good company and swedish fika!
 		</p>
-		<p class="text-center"><b>W.I.P</b></p>-->
       </div>
       <div class="row">
 		<div class="col-lg-4 ml-auto">
@@ -258,88 +245,11 @@
 			  <h5 class ="text-center mb-0">Futuregames</h5>
 				<p class="text-center lead mb-0">Game Programming<br>
 				(2019 – 2021)</p>
-		  <!--<p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>-->
 		</div>
       </div>
-	  
-      <!-- About Section Button -->
-	  <!--
-      <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/">
-          <i class="fas fa-download mr-2"></i>
-          Free Download!
-        </a>
-      </div>
-		-->
     </div>
   </section>
 
-  <!-- Contact Section -->
- <!-- 
-  <section class="page-section bg-whitepattern" id="contact">
-    <div class="container">
-
-      <!-- Contact Section Heading -->
-    
- <!--   <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact</h2>
-
-      <!-- Icon Divider -->
-   
- <!--    <div class="divider-custom">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon">
-          <i class="fas fa-bell"></i>
-        </div>
-        <div class="divider-custom-line"></div>
-      </div>
-
-      <!-- Contact Section Form -->
-  
- <!--     <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-  
- <!--         <form name="sentMessage" id="contactForm" novalidate="novalidate">
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Name</label>
-                <input class="form-control" id="name" type="text" placeholder="Stop" required="required" data-validation-required-message="Please enter your name.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Email Address</label>
-                <input class="form-control" id="email" type="email" placeholder="Sending" required="required" data-validation-required-message="Please enter your email address.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Phone Number</label>
-                <input class="form-control" id="phone" type="tel" placeholder="Me" required="required" data-validation-required-message="Please enter your phone number.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Message</label>
-                <textarea class="form-control" id="message" rows="5" placeholder="E-mails" required="required" data-validation-required-message="Please enter a message."></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <br>
-            <div id="success"></div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Spam</button>
-            </div>
-          </form>
-        </div>
-      </div>
-
-    </div>
-  </section>
--->
   <!-- Footer -->
   <footer class="bg-secondary footer text-center">
     <div class="container">
@@ -477,8 +387,14 @@
 					</p>
 					<img class="img-fluid rounded mb-3" src="img/portfolio/rimramrum/charselect.jpg" alt="">
 					<p>
-						A script called ReadyState.cs keeps track of four instances of the class PlayerSlot, designated to the maximum number of players. Each instance has an enum denoting the state of the slot. Either the slot is waiting for a player to press a button to join, selecting a ship or is ready and waiting for other slots to finish selections.
-					</p><p>
+						A script called ReadyState.cs keeps track of four instances of the class PlayerSlot, based on the maximum number of players. Each instance has an enum denoting the state of the slot. Either the slot is waiting for a player to press a button to join, selecting a ship or is ready and waiting for other slots to finish selections.
+					</p>
+					<div class="project-section text-white mb-2"><h4 class="rounded bg-secondary-color project-header">Handling selections</h4>
+						<div class="project-content">
+							<script src="https://gist.github.com/Fireshadows/421e5a17dcf605c82feb696526f14910.js"></script>
+						</div>
+					</div>
+					<p>
 						Depending on the selected game mode (Free-for-all, Team battle), either the game can be started once at least 2 player slot instances are ready or if at least 2 teams contain one player.
 					</p>
 					<!-- Portfolio Modal - Image -->
@@ -489,19 +405,26 @@
 					<!--<div class="divider-custom"><div class="header-custom-line"></div></div>-->
 					<div class="project-content">
 					<p>
-					Team battle can be enabled in the lobby. Once enabled, the game will basically look for other types of criterias in order to switch game states or know when a battle is over.
-					</p><p>
-					Data of all teams are stored in an array and consists of the team name, color and number of battles won (which gets displayed after a battle is over).
-					</p><p>
-					When a team battle starts, the GameDirector.cs script will create the actual teams using the datas as reference. It will look through all players to see if they possess data of a team that isn’t created yet, and will create that team if that is the case.
-					</p><p>
-					The teams that are created will hold references to the player ship classes to keep track of what members are part of what teams. A team battle will end upon detecting that only 1 team with alive members remains.
+					Team battle can be enabled in the lobby. Depending on the game mode, different conditions have to be fulfilled for a battle to end. The win conditions are described in code below.
 					</p>
-					<!--<div class="project-section text-white mb-2"><h3 class="rounded bg-secondary-color project-header">GameDirector.cs</h3>
+					<div class="project-section text-white mb-2"><h4 class="rounded bg-secondary-color project-header">Win conditions and how they're used</h4>
 						<div class="project-content">
 							<script src="https://gist.github.com/Fireshadows/f4ef31f7edab4066af3c4ddd7c14e040.js"></script>
 						</div>
-					</div>-->
+					</div>
+					<p>
+					Data of all possible teams are stored in an array and consists of the team name, color and number of battles won (which gets displayed in the results screen so winners can brag).
+					</p><p>
+					When a team battle starts, the GameDirector.cs script will create the actual teams using the datas as reference. It will look through all players to see if they possess data of a team that isn’t created yet, and will create that team if that is the case.
+					</p>
+					<div class="project-section text-white mb-2"><h4 class="rounded bg-secondary-color project-header">Creating teams upon preparing battle</h4>
+						<div class="project-content">
+							<script src="https://gist.github.com/Fireshadows/d26a52ce3e0b2889739905ad9d160d7e.js"></script>
+						</div>
+					</div>
+					<p>
+					The teams that are created will hold references to the player ship classes to keep track of what members are part of what teams. A team battle will of course end upon detecting that only 1 team with alive members remains.
+					</p>
 					<!-- Portfolio Modal - Image 
 					<img class="img-fluid rounded mb-5" src="img/portfolio/placeholder.jpg" alt="">-->
 				</div></div>
@@ -574,7 +497,7 @@
 					</p><p>
 						The tetris blocks themselves don't actually have colliders. Whenever a falling tetromino moves, a script called Matrix.cs uses the locations of all tetris blocks to enable tiles on a separate tilemap gameobject, which are only invisible tiles with colliders. I must stress that I was not in charge of any of the tetris parts, but I find this necessary to mention regardless.
 					</p><p>
-						With a whole tilemap that represented the terrain of the entire tetris field, I could check the player’s collision against the terrain using raytrace colliders. I only utilized raytrace colliders against the terrain and used simple box colliders against anything else such as enemies and coins.
+						With a whole tilemap that represented the terrain of the entire tetris field, I could check the player’s collision against the terrain using raytrace colliders. I only utilized raytrace colliders against the terrain and used simple box colliders against  anything else such as enemies and coins.
 						To ensure I covered all corners of the players boundaries, I cast 3 rays on all four sides of the player, one that was cast from the center of a side and the other two being cast on each respective extreme edge of the side. It wasn’t necessary at first to check for collisions against walls behind the player, only against walls in front of the player since the player cannot move backwards. The introduction of conveyor belts changed that however, since they can move the player to any horizontal direction regardless which one the player is facing.
 					</p><p>
 						The raycast distance had to be very short since they were meant to snap a player to the position where a ray hit the terrain. However, once the player moved, the distances had to be slightly increased in case the raycasts moved past the terrain colliders between frames - that would be a situation where the player could just move or fall through terrain because the raycasts are just too short!
